--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@prisma/client": "^5.19.0",
     "bcrypt": "^5.1.1",
-    "jsonwebtoken": "^9.0.2",
+    "jose": "^5.8.0",
     "next": "14.2.7",
     "react": "^18",
     "react-dom": "^18"
